fix bug where tweets would overflow their containers

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -40,10 +40,10 @@ main {
   font-weight: 300;
 }
 
-/* .word-wrap {
-  overflow-wrap: break-word;
+.word-wrap {
+  overflow-wrap: anywhere;
 }
- */
+
 /* Tablet and Desktop Styles */
 @media only screen and (min-width: 1024px) {
   body {
